assets/css/style.css
html, body {
	padding: 0;
	margin: 0;
	height: 100%;
}

* {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: #fff;
    letter-spacing: 1px;
    outline: none;
}

body {
    background-color: #181818;
    font-size: 14px;
    min-width: 720px;
}

#nowPlayingBarContainer {
	width: 100%;
    background-color: #282828;
    bottom: 0;
    position: fixed;
    min-width: 620px;
}

#nowPlayingBar {
	display: flex;
    height: 90px;
    padding: 16px;
    box-sizing: border-box;
}

#nowPlayingLeft,
#nowPlayingRight {
	width: 30%;
    min-width: 180px;
}

#nowPlayingRight {
	position: relative;
    margin-top: 16px;
}

#nowPlayingCenter {
	width: 40%;
    max-width: 700px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#nowPlayingBar .content {
	width: 100%;
    height: 57px;
    display: flex;
    display: table;
}

.playerControls .buttons {
	margin: 0 auto;
    display: table;
}

.controlButton {
	background-color: transparent;
    border: none;
    vertical-align: middle;
    outline:none;
}

.controlButton img {
	width: 25px;
    height: 25px;
}

.controlButton.play img,
.controlButton.pause img {
	width: 40px;
	height: 40px;
}

.controlButton:hover {
	cursor: pointer;
}

.progressTime {
	color: #a0a0a0;
    font-size: 11px;
    min-width: 40px;
    text-align: center;
}

.playbackBar {
    display: flex;
    width: 100%;
    margin-top: 3px;
}

.progressBar {
	width: 100%;
    height: 12px;
    display: inline-flex;
    cursor: pointer;
}

.progressBarBg {
	background-color: #404040;
    height: 4px;
    width: 100%;
    border-radius: 2px;
}

.progress {
	background-color: #a0a0a0;
    height: 4px;
    width: 0;
    border-radius: 2px;
}

.playbackBar .progressBar {
	margin-top: 3px;
}

#nowPlayingLeft .albumArtwork {
	height: 100%;
    max-width: 57px;
    margin-right: 15px;
    float: left;
    background-size: cover;
}

.albumLink img{
    height: 57px;
}

#nowPlayingLeft .trackInfo {
    display: table;
    float: left;
    text-align: left;
    margin-left: 10px;
}

#nowPlayingLeft .trackInfo .trackName {
	margin: 6px 0;
    display: inline-block;
    width: 100%;
}

#nowPlayingLeft .trackInfo .artistName span {
	font-size: 12px;
    color: #a0a0a0;
}

.volumeBar {
	width: 180px;
    position: absolute;
    right: 0;
}

.volumeBar .progressBar {
	width: 125px;
}

#topContainer {
	min-height: 100%;
	width: 100%;
}

#navBarContainer {
	background-color: #000;
    width: 220px;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
}

.navBar {
    padding: 25px;
    display: flex;
    flex-direction: column;
    -ms-flex-direction: column;
}

.logo {
    margin-bottom: 15px;
}

.logo img {
    width: 32px;
}

.navBar .group {
    border-top: 1px solid #a0a0a0;
    padding: 10px 0;
}

.navItem {
    padding: 10px 0;
    font-size: 14px;
    font-weight: 700;
    display: block;
    letter-spacing: 1px;
    position: relative;
}

.navItemLink {
    color: #a0a0a0;
    text-decoration: none;
}

.navItemLink:hover {
    color: #ffffff;
}

.navItemLink .icon {
    position: absolute;
    right: 0;
    top: 6px;
    width: 25px;
}

#mainViewContainer {
    margin-left: 220px;
    padding-bottom: 90px;
    width: calc(100% - 220px);
}

#mainContent {
    padding: 0 20px;
}

.pageHeadingBig {
    padding: 20px;
    text-align: center;
}

.gridViewItem {
    display: inline-block;
    margin-right: 20px;
    width: 29%;
    max-width: 200px;
    min-width: 150px;
    margin-bottom: 20px;
}

.gridViewItem img {
    width: 100%;
}

.gridViewInfo {
    font-weight: 300;
    text-align: center;
    padding: 5px 0;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.gridViewItem a {
    text-decoration: none;
}

/* *************** Album.php   **************** */

#mainContent .entityInfo {
    display: table;
}

#mainContent .entityInfo .leftSection {
    float: left;
    margin: 20px;
    padding-top: 20px;
}

#mainContent .entityInfo .leftSection img {
    height: 250px;
    width: 250px;
    border: 1px solid black;
    border-radius: 5px;
}

#mainContent .entityInfo .rightSection {
    float: right;
}

#mainContent .entityInfo .rightSection h2{
    margin-left: 20px;
    margin-top: 30px;
    margin-bottom: 5px;
    font-size: 30px;
    font-family: cursive;
    display: block;
    letter-spacing: 2px;
}

#mainContent .entityInfo .rightSection p{
    margin-left: 25px;
    font-family: serif;
    color: #939393;
}


/* *************** Track List   ********************* */

.tracklist{
	padding:0px;
}

.tracklistRow{
	height:40px;
	padding:15px 10px;
	list-style:none;
}

.tracklistRow span{
	color:#939393;
	font-weight:200;
}

.tracklistRow:hover{
	background-color:#282828;
}

.tracklistCount{
    width: 8%;
    float: left;
}

.tracklistCount img{
    width: 20px;
    cursor: pointer;
    visibility: hidden;
    position: absolute;
}

.tracklistRow:hover .tracklistCount img{
    visibility: visible;
}
.tracklistRow:hover .tracklistCount span{
    visibility: hidden;
}

.tracklistRow .trackInfo{
    width: 75%;
    float: left;
    text-align: left;
}

.tracklistRow .trackInfo span{
    display: block;    
}

.tracklistRow .trackInfo .trackName{
    color: #fff;   
    margin-bottom: 7px; 
}

.tracklistRow .trackOption{
    width: 5%;
    float: left;
    text-align: right;
}

.tracklistRow .trackOption img{
    width: 15px;
    visibility: hidden;
}

.tracklistRow:hover .trackOption img{
    visibility: visible;
}

.tracklistRow .trackDuration{
    width: 12%;
    float: left;
    text-align: right;
}

